manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audio-speech-to-text-silero-svc
spec:
  selector:
    app: audio-speech-to-text-silero
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
